--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                   optics.
                 </p>
                 <p>
+                  I am now a research assistant in Prof. Peng Li's group at Zhejiang University, doing research on OCT/OCTA applications. In the meantime, I
+                  am an incoming EE Ph.D. student of Caltech at Fall 2024, waiting for my new journey with Prof. Lihong V. Wang.
+                </p>
+                <p>
                 
               </p>
                 
@@ -52,7 +56,7 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
-                <a href="images/longqianh.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/longqianh.png" class="hoverZoomLink"></a>
+                <a href="images/luffy.jpeg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/luffy.jpeg" class="hoverZoomLink"></a>
               </td>
             </tr>
           </tbody></table>
