--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </p>
                 <p> Previously, I got my bachelor's degree in Optical Engineering from Zhejiang University in 2022, with an honors degree from
                 Chu Kochen Honors College. During my undergraduate, I was fortunate to work closely with Prof. Xiang Hao and Prof. Xu Liu 
-                on several research projects regarding computational imaging. I received <a href="http://opt.zju.edu.cn/2022/0622/c72762a2596162/page.psp", target="_blank">
+                on several research projects regarding computational imaging. I received <a href="http://opt.zju.edu.cn/2022/0622/c72762a2596162/page.htm", target="_blank">
                 'Top 10 Academic Achievements in Zhejiang University Students'</a> in 2022.
                 </p>
                 <p>
