--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             <br>
             <i>Light: Science & Applications</i> <strong>11</strong>(1), 61 (2022). 
             <font color="red">
-              <strong>(Cover paper, 2022 & 2023 top downloaded paper)</strong>
+              <strong>(Cover paper, 2022 & 2023 & 2024 top downloaded paper)</strong>
             </font> 
             <p>
             <p>
