--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                   Longqian HUANG (黄隆钤)
                 </p>
                 <p>
-                  Hello👋! My name is Longqian Huang, an enthusiast in advancing cutting-edge optical technologies for brain science.  
+                  Hello👋! My name is Longqian Huang (Peter), an enthusiast in advancing cutting-edge optical technologies for brain science.  
                 </p>
                 <p> Previously, I got my bachelor's degree in Optical Engineering from Zhejiang University in 2022, with an honors degree from
                 Chu Kochen Honors College. During my undergraduate, I was fortunate to work closely with Prof. Xiang Hao and Prof. Xu Liu 
@@ -54,6 +54,9 @@
                   <!-- <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp; -->
                   <a href="https://github.com/longqianh", target="_blank">Github</a> &nbsp;/&nbsp;
                   <a href="https://longqianh.com", target="_blank">Blog</a>
+                  
+                  &nbsp;/&nbsp;
+                  <a href="demo.html" target="_blank">Demo Page</a>
                 </p>
               </td>
               <td style="padding:2%;width:40%;max-width:40%">
