--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <a href="https://longqianh.com", target="_blank">Blog</a>
                   
                   &nbsp;/&nbsp;
-                  <a href="demo.html" target="_blank">Demo Page</a>
+                  <a href="demo.html" target="_blank">PA Demo Page</a>
                 </p>
               </td>
               <td style="padding:2%;width:40%;max-width:40%">
