--- a/awesome_pa.html
+++ b/awesome_pa.html
@@ -86,7 +86,7 @@
                 An Awesome List of Photoacoustic Imaging
             </h1>
             <p class="mt-4 text-lg md:text-xl text-slate-600 max-w-3xl mx-auto">
-                An interactive guide to the foundational discoveries, key technologies, and transformative applications of the imaging modality that combines <span class="font-semibold text-teal-600">light and sound</span>.
+                This is a AI-generated research list site for test.<span class="font-semibold text-teal-600">light and sound</span>.
             </p>
         </section>
 
@@ -170,7 +170,7 @@ document.addEventListener('DOMContentLoaded', function () {
         labs: [
             { name: 'Johns Hopkins University', leader: 'PULSE Lab (Prof. M. A. Lediju Bell)', focus: 'Surgical guidance, transcranial PAI, advanced beamforming.', link: 'https://pulse.jhu.edu/'},
             { name: 'University College London', leader: 'BORL (Profs. Beard, Cox, Treeby)', focus: 'Instrumentation, all-optical PAI, reconstruction (k-Wave).', link: 'https://www.ucl.ac.uk/medical-physics-biomedical-engineering/research/research-groups/biomedical-optics-research-laboratory-borl'},
-            { name: 'Caltech', leader: 'Prof. Lihong V. Wang Lab', focus: 'Pioneering PACT/PAM, functional imaging, quantitative PAI.', link: 'https://www.eas.caltech.edu/people/lihong-v-wang'},
+            { name: 'Caltech', leader: 'Prof. Lihong V. Wang Lab', focus: 'Pioneering PACT/PAM, functional imaging, quantitative PAI.', link: 'https://coilab.caltech.edu/'},
             { name: 'MD Anderson Cancer Center', leader: 'Profs. Bouchard & Melancon', focus: 'Oncology, theranostics, nanoparticle contrast agents.', link: 'https://www.mdanderson.org/research/departments-labs-institutes/labs/photoacoustic-imaging-research-laboratory.html'},
             { name: 'FUJIFILM VisualSonics', leader: 'Commercial Entity', focus: 'Leading provider of preclinical high-frequency PA/US systems.', link: 'https://www.visualsonics.com/'},
             { name: 'iThera Medical', leader: 'Commercial Entity', focus: 'Commercializes clinical MSOT systems for inflammation and cancer.', link: 'https://www.ithera-medical.com/'}
