--- a/awesome_pa.html
+++ b/awesome_pa.html
@@ -86,7 +86,7 @@
                 An Awesome List of Photoacoustic Imaging
             </h1>
             <p class="mt-4 text-lg md:text-xl text-slate-600 max-w-3xl mx-auto">
-                This is a AI-generated research list site for test.<span class="font-semibold text-teal-600">light and sound</span>.
+                This is a AI-generated research list site for test.<span class="font-semibold text-teal-600"> We love Light and Sound!</span>.
             </p>
         </section>
 
